--- a/plan.html
+++ b/plan.html
@@ -124,25 +124,32 @@
       // =============== AI 제안 생성 (랜덤 더미) ===============
       const suggestions = [
   {
-    "title": "교과서 근의 공식 개념 정리",
-    "emoji": "📙",
-    "memo": "103~109쪽 개념 정리하기",
+    "title": "교과서 개념 학습",
+    "emoji": "📗",
+    "memo": "이차함수 94~99쪽 개념 정리",
     "start": "12:00",
-    "end": "12:35"
+    "end": "12:30"
   },
   {
-    "title": "특급기출 문제 복습 및 풀이",
-    "emoji": "🔥",
-    "memo": "46쪽~ 48쪽 근의 공식 문제 풀이",
-    "start": "12:35",
-    "end": "13:15"
+    "title": "쎈 개념 정리 복습",
+    "emoji": "📘",
+    "memo": "이차함수 핵심 개념 요약",
+    "start": "12:30",
+    "end": "12:40"
   },
   {
-    "title": "근의 공식 응용 정리",
-    "emoji": "🧠",
-    "memo": "오답 및 응용 정리",
-    "start": "13:15",
-    "end": "13:45"
+    "title": "쎈 문제풀이",
+    "emoji": "✏️",
+    "memo": "이차함수 의미 문제  (100~105쪽) 집중 풀이", 
+    "start": "12:40",
+    "end": "13:30"
+  },
+  {
+    "title": "오답 정리 및 마무리 복습",
+    "emoji": "📝",
+    "memo": "문제 복기 + 핵심 정리(개념 정리 포함)",
+    "start": "13:30",
+    "end": "14:00"
   }
 ];
         
