--- a/feedback.html
+++ b/feedback.html
@@ -454,29 +454,29 @@
       if (url === "/api/feedback/daily") {
         const feedbacks = [
   {
-    "analysis": "오늘 12:00–12:35에 근의 공식 개념을 완벽히 정리하셨고, 12:35–13:15에는 기출 문제로 실전 감각을 익히셨습니다. 13:15–13:45 응용 정리 시간에는 오답 유형을 체계적으로 분류하며 이해를 심화하셨습니다.",
-    "suggestion": "내일은 10분 동안 노트 없이 오늘 배운 개념을 스스로 구술해 보는 ‘자기 설명(Self-explanation) 퀴즈’를 추가하세요. 이후 20분 동안 판별식 활용 심화 문제 5개를 풀고, 풀이 과정을 3줄 이내로 요약해 보충 학습하면 좋겠습니다.",
-    "encouragement": "오늘처럼 스스로 확인하고 정리하는 습관이 점수 상승의 지름길입니다. 내일도 자신 있게 도전해 보세요! 💪"
+    "analysis": "플랜이 교과서 개념→쎈 개념 복습→쎈 문제풀이→오답 정리 순으로 이론부터 실전, 복습까지 균형 있게 구성되어 있어 학습 흐름이 매우 체계적입니다.",
+    "suggestion": "내일은 세션 사이에 3분짜리 ‘핵심 공식 암송’ 타임을 넣어보세요. 짧게 소리 내어 공식과 정의를 반복하면 기억이 오래갑니다.",
+    "encouragement": "이렇게 짜임새 있는 계획을 잘 따라가면 개념과 문제 풀이 모두 탄탄해질 거예요. 오늘도 잘했어요! 🎉"
   },
   {
-    "analysis": "개념 정리→기출 풀이→응용 정리로 이어지는 학습 흐름이 매끄러웠으며, 특히 응용 시간에 틀린 문제를 유형별로 재분류한 점이 돋보였습니다.",
-    "suggestion": "내일은 5분 휴식 후, 30분 타이머를 켜고 기출과 응용을 섞어 문제 10개를 랜덤 풀이해 보세요. 문제 유형이 섞이면 실전 감각이 더욱 강화됩니다.",
-    "encouragement": "섞어 풀기 방식으로 실전 적응력을 키우면, 시험장에서도 당황하지 않고 문제에 집중할 수 있을 거예요. 화이팅! 🚀"
+    "analysis": "쎈 개념 정리 복습 시간을 10분으로 짧게 잡아 집중도가 높고, 바로 이어서 문제풀이에 투입되는 점이 인상적입니다.",
+    "suggestion": "문제풀이 세션 전 2~3분간 ‘예상 실수 포인트’ 메모를 해보세요. 문제풀 때 실수 위험을 미리 인지하면 정확도가 올라갑니다.",
+    "encouragement": "작은 준비가 큰 차이를 만듭니다. 내일도 한층 더 정확한 풀이를 기대할게요! 💪"
   },
   {
-    "analysis": "첫 세션에서 개념 이해를 튼튼히 다졌고, 두 번째 세션에서 기출 문제로 바로 적용하며 효과적으로 학습하셨습니다. 응용 단계에서도 핵심 공식 활용에 자신감이 붙으셨습니다.",
-    "suggestion": "내일은 동료에게 오늘 배운 내용을 5분 동안 설명해 주는 ‘피어 티칭(Peer Teaching)’을 시도해 보세요. 설명 중 헷갈리는 부분이 있으면 오답 노트에 보충 정리해 두시면 더욱 좋습니다.",
-    "encouragement": "가르치면서 배우는 것은 최고의 복습 방법 중 하나입니다. 내일은 친구나 스터디 파트너와 함께 도전해 보세요! 🎓"
+    "analysis": "12:40–13:30에 충분한 시간을 할애하여 복잡한 문제에 몰입할 수 있게 한 점이 좋습니다.",
+    "suggestion": "오답 정리 전, 스스로 5분 동안 ‘노트 없이 오늘 배운 개념 설명하기’ 퀴즈를 해보세요. 설명 중 막히는 부분을 바로 보완하면 효과적입니다.",
+    "encouragement": "스스로 설명하며 이해도를 점검하는 습관이 곧 실력 향상으로 이어집니다. 내일도 도전해 보세요! 🚀"
   },
   {
-    "analysis": "세 세션 모두 계획대로 완수하셨습니다. 특히 응용 정리 때 실수 포인트를 놓치지 않고 기록해 두신 점이 인상적입니다.",
-    "suggestion": "내일은 오전 학습 전 5분 동안 이전 날 오답 노트를 복습하고, 오후에는 15분간 스페이스 리피티션(Spaced Repetition)으로 다시 한 번 핵심 공식을 반복 암기해 보세요.",
-    "encouragement": "짧고 반복적인 복습이 장기 기억으로 이어집니다. 꾸준히 실천하시면 잊지 않고 완벽하게 숙지할 수 있을 거예요! 🔄"
+    "analysis": "13:30–14:00 오답 정리 및 마무리 복습으로 학습을 깔끔히 마무리하는 루틴이 잘 갖춰져 있습니다.",
+    "suggestion": "오답을 유형별로 분류한 뒤, 내일은 각 유형별 대표 문제 2개씩을 뽑아 15분 안에 풀어보면 응용력이 더 강화됩니다.",
+    "encouragement": "오답에서 배우는 자세가 실전에서 큰 힘이 됩니다. 꾸준히 실천해 나가면 성과가 분명히 보일 거예요! 👍"
   },
   {
-    "analysis": "오늘 12:00–13:45 플랜을 완벽히 소화하며 기초부터 응용까지 균형 잡힌 학습을 진행하셨습니다.",
-    "suggestion": "내일은 실제 시험 환경을 모사해, 40분 안에 근의 공식을 이용한 혼합 문제 12개를 풀어 보세요. 시험과 같은 시간 압박을 경험하면 집중력과 속도 모두 향상됩니다.",
-    "encouragement": "실전 연습을 통해 시험 스트레스를 줄이고, 더 여유 있게 문제를 풀 수 있을 거예요. 내일도 파이팅입니다! 🏆"
+    "analysis": "전체적으로 교과서와 쎈 교재를 적절히 병행하여 개념과 응용을 모두 아우르는 균형 잡힌 플랜입니다.",
+    "suggestion": "내일은 마지막 세션 전에 5분간 ‘스페이스 리피티션’으로 핵심 공식 5가지를 소리 내어 반복해 보세요. 장기 기억이 강화됩니다.",
+    "encouragement": "짧은 반복 학습이 장기 기억의 핵심입니다. 오늘처럼 꾸준히 하면 더욱 튼튼한 실력을 쌓을 수 있어요! 🔄"
   }
 ];
         const feedback = feedbacks[Math.floor(Math.random() * feedbacks.length)];
@@ -495,10 +495,11 @@
             totalTime: 105, // in minutes
             comparisonText: "지난주 오늘보다 15분 더 공부했어요", // Example comparison text
             studyItems: [
-              "교과서 근의 공식 개념 정리: 103~109쪽 개념 정리하기 (12:00–12:35)",
-              "특급기출 문제 복습 및 풀이: 46쪽~48쪽 근의 공식 문제 풀이 (12:35–13:15)",
-              "근의 공식 응용 정리: 오답 및 응용 정리 (13:15–13:45)"
-            ],
+            "교과서 개념 학습: 이차함수 94~99쪽 개념 정리 (12:00–12:30)",
+            "쎈 개념 정리 복습: 이차함수 핵심 개념 요약 (12:30–12:40)",
+            "쎈 문제풀이: 이차함수 의미 문제 (100~105쪽) 집중 풀이 (12:40–13:30)",
+            "오답 정리 및 마무리 복습: 문제 복기 + 핵심 정리(개념 정리 포함) (13:30–14:00)"
+          ],
             feedback: feedback,
           })
         });
