--- a/feedback.html
+++ b/feedback.html
@@ -454,29 +454,29 @@
       if (url === "/api/feedback/daily") {
         const feedbacks = [
   {
-    "analysis": "플랜이 교과서 개념→쎈 개념 복습→쎈 문제풀이→오답 정리 순으로 이론부터 실전, 복습까지 균형 있게 구성되어 있어 학습 흐름이 매우 체계적입니다.",
-    "suggestion": "내일은 세션 사이에 3분짜리 ‘핵심 공식 암송’ 타임을 넣어보세요. 짧게 소리 내어 공식과 정의를 반복하면 기억이 오래갑니다.",
-    "encouragement": "이렇게 짜임새 있는 계획을 잘 따라가면 개념과 문제 풀이 모두 탄탄해질 거예요. 오늘도 잘했어요! 🎉"
+    "analysis": "오늘 플랜은 지학사 교과서 개념 정리→RPM 문제 풀이→오답 & 요점 정리 순으로 이론부터 실전, 복습까지 깔끔하게 짜여 있어 체계적인 학습 흐름이 잘 나타났습니다.",
+    "suggestion": "내일은 첫 세션 후 3분간 ‘핵심 개념 요약 암송’을 추가해 보세요. 소리 내어 정리하면 기억에 오래 남습니다.",
+    "encouragement": "단계별로 나눠 학습하니 집중도가 높아졌어요. 오늘처럼 차근차근 해나가면 실력이 확실히 올라갈 거예요! 👍"
   },
   {
-    "analysis": "쎈 개념 정리 복습 시간을 10분으로 짧게 잡아 집중도가 높고, 바로 이어서 문제풀이에 투입되는 점이 인상적입니다.",
-    "suggestion": "문제풀이 세션 전 2~3분간 ‘예상 실수 포인트’ 메모를 해보세요. 문제풀 때 실수 위험을 미리 인지하면 정확도가 올라갑니다.",
-    "encouragement": "작은 준비가 큰 차이를 만듭니다. 내일도 한층 더 정확한 풀이를 기대할게요! 💪"
+    "analysis": "RPM 문제 풀이 시간을 40분으로 충분히 확보해 집중력이 유지됐습니다.",
+    "suggestion": "내일은 문제풀이 중간에 ‘오답 예측 메모’ 2분을 넣어 보세요. 풀기 전 예상 실수 포인트를 적으면 정확도가 올라갑니다.",
+    "encouragement": "미리 대비하는 습관이 큰 차이를 만듭니다. 내일도 자신 있게 도전해 보세요! 💪"
   },
   {
-    "analysis": "12:40–13:30에 충분한 시간을 할애하여 복잡한 문제에 몰입할 수 있게 한 점이 좋습니다.",
-    "suggestion": "오답 정리 전, 스스로 5분 동안 ‘노트 없이 오늘 배운 개념 설명하기’ 퀴즈를 해보세요. 설명 중 막히는 부분을 바로 보완하면 효과적입니다.",
-    "encouragement": "스스로 설명하며 이해도를 점검하는 습관이 곧 실력 향상으로 이어집니다. 내일도 도전해 보세요! 🚀"
+    "analysis": "오답 & 요점 정리 세션에서 틀린 유형을 바로 정리하며 복습 효과를 높인 점이 좋습니다.",
+    "suggestion": "내일은 이 세션 전에 5분 동안 ‘노트 없이 오늘 배운 개념 설명하기’ 퀴즈를 해 보세요. 설명 중 헷갈리는 부분을 바로 보충하면 이해가 더욱 견고해집니다.",
+    "encouragement": "스스로 설명하며 점검하는 습관이 실력을 업그레이드합니다. 파이팅! 🚀"
   },
   {
-    "analysis": "13:30–14:00 오답 정리 및 마무리 복습으로 학습을 깔끔히 마무리하는 루틴이 잘 갖춰져 있습니다.",
-    "suggestion": "오답을 유형별로 분류한 뒤, 내일은 각 유형별 대표 문제 2개씩을 뽑아 15분 안에 풀어보면 응용력이 더 강화됩니다.",
-    "encouragement": "오답에서 배우는 자세가 실전에서 큰 힘이 됩니다. 꾸준히 실천해 나가면 성과가 분명히 보일 거예요! 👍"
+    "analysis": "교과서와 RPM 교재를 적절히 병행해 개념과 문제풀이 모두 아우른 균형 잡힌 플랜입니다.",
+    "suggestion": "내일은 플랜 전후로 5분씩 ‘스페이스 리피티션’으로 핵심 공식 4~5개를 반복 암기해 보세요. 장기 기억에 도움이 됩니다.",
+    "encouragement": "짧은 반복 학습이 장기 기억의 지름길입니다. 오늘처럼 꾸준히 하면 더 탄탄해질 거예요! 🔄"
   },
   {
-    "analysis": "전체적으로 교과서와 쎈 교재를 적절히 병행하여 개념과 응용을 모두 아우르는 균형 잡힌 플랜입니다.",
-    "suggestion": "내일은 마지막 세션 전에 5분간 ‘스페이스 리피티션’으로 핵심 공식 5가지를 소리 내어 반복해 보세요. 장기 기억이 강화됩니다.",
-    "encouragement": "짧은 반복 학습이 장기 기억의 핵심입니다. 오늘처럼 꾸준히 하면 더욱 튼튼한 실력을 쌓을 수 있어요! 🔄"
+    "analysis": "전체적으로 오늘 학습 플랜을 완수하며 이론부터 응용, 복습까지 효과적으로 소화하셨습니다.",
+    "suggestion": "내일은 시험 환경을 모사해 30분 안에 개념과 문제를 섞어 8문제를 풀어보세요. 시간 압박 속에서도 흐름을 유지하는 연습이 됩니다.",
+    "encouragement": "실전 연습을 통해 집중력과 속도를 모두 기를 수 있습니다. 내일도 멋지게 해내실 거예요! 🎯"
   }
 ];
         const feedback = feedbacks[Math.floor(Math.random() * feedbacks.length)];
@@ -495,11 +495,10 @@
             totalTime: 105, // in minutes
             comparisonText: "지난주 오늘보다 15분 더 공부했어요", // Example comparison text
             studyItems: [
-            "교과서 개념 학습: 이차함수 94~99쪽 개념 정리 (12:00–12:30)",
-            "쎈 개념 정리 복습: 이차함수 핵심 개념 요약 (12:30–12:40)",
-            "쎈 문제풀이: 이차함수 의미 문제 (100~105쪽) 집중 풀이 (12:40–13:30)",
-            "오답 정리 및 마무리 복습: 문제 복기 + 핵심 정리(개념 정리 포함) (13:30–14:00)"
-          ],
+  "지학사 교과서 개념 정리: 100~103쪽 정리 (12:00–12:30)",
+  "RPM 이차함수 문제 풀이: 120~125쪽 문제 (12:30–13:10)",
+  "이차함수 오답 & 요점 정리: 노트 정리 및 복습 (13:10–13:35)"
+],
             feedback: feedback,
           })
         });
