--- a/feedback.html
+++ b/feedback.html
@@ -454,29 +454,29 @@
       if (url === "/api/feedback/daily") {
         const feedbacks = [
   {
-    "analysis": "오늘 플랜은 지학사 교과서 개념 정리→RPM 문제 풀이→오답 & 요점 정리 순으로 이론부터 실전, 복습까지 깔끔하게 짜여 있어 체계적인 학습 흐름이 잘 나타났습니다.",
-    "suggestion": "내일은 첫 세션 후 3분간 ‘핵심 개념 요약 암송’을 추가해 보세요. 소리 내어 정리하면 기억에 오래 남습니다.",
-    "encouragement": "단계별로 나눠 학습하니 집중도가 높아졌어요. 오늘처럼 차근차근 해나가면 실력이 확실히 올라갈 거예요! 👍"
+    "analysis": "플랜이 ‘개념 정독→확인 문제+실전 연습→오답 복습’의 순서로 이론부터 적용, 복습까지 자연스럽게 이어져 있어 학습 흐름이 매우 잘 짜여 있습니다.",
+    "suggestion": "내일은 첫 세션 후 5분간 ‘핵심 정의 구술 점검’을 해 보세요. 노트 없이 주요 개념을 소리 내어 설명하며 빈틈을 찾아보면 이해가 더욱 견고해집니다.",
+    "encouragement": "기초를 탄탄히 다진 뒤 바로 적용해 보는 방식이 학습 효율을 극대화합니다. 오늘처럼 차근차근 해 나가면 큰 성과가 있을 거예요! 🌟"
   },
   {
-    "analysis": "RPM 문제 풀이 시간을 40분으로 충분히 확보해 집중력이 유지됐습니다.",
-    "suggestion": "내일은 문제풀이 중간에 ‘오답 예측 메모’ 2분을 넣어 보세요. 풀기 전 예상 실수 포인트를 적으면 정확도가 올라갑니다.",
-    "encouragement": "미리 대비하는 습관이 큰 차이를 만듭니다. 내일도 자신 있게 도전해 보세요! 💪"
+    "analysis": "12:30–13:10 확인 문제와 실전 연습 시간에 개념 확인과 적용을 병행해 실전 감각을 키우신 점이 인상적입니다.",
+    "suggestion": "내일은 문제풀이 중간에 ‘예상 실수 메모’ 2분을 추가하세요. 문제를 풀기 전에 실수할 가능성이 있는 부분을 미리 써보면 정확도가 높아집니다.",
+    "encouragement": "미리 대비하는 습관이 실력을 한 단계 끌어올립니다. 내일도 자신 있게 도전해 보세요! 💪"
   },
   {
-    "analysis": "오답 & 요점 정리 세션에서 틀린 유형을 바로 정리하며 복습 효과를 높인 점이 좋습니다.",
-    "suggestion": "내일은 이 세션 전에 5분 동안 ‘노트 없이 오늘 배운 개념 설명하기’ 퀴즈를 해 보세요. 설명 중 헷갈리는 부분을 바로 보충하면 이해가 더욱 견고해집니다.",
-    "encouragement": "스스로 설명하며 점검하는 습관이 실력을 업그레이드합니다. 파이팅! 🚀"
+    "analysis": "오답 복습 및 정리 세션에서 틀린 문제를 바로 검토하여 학습 효과를 극대화하신 점이 좋습니다.",
+    "suggestion": "내일은 이 세션 전에 ‘노트 없이 오늘 배운 핵심 3가지 요약’ 퀴즈를 3분간 시도하고, 막히는 부분을 보완해 보세요.",
+    "encouragement": "스스로 설명하며 점검하는 방식이 깊은 학습을 돕습니다. 오늘처럼 집중하면 실력이 더욱 단단해질 거예요! 🚀"
   },
   {
-    "analysis": "교과서와 RPM 교재를 적절히 병행해 개념과 문제풀이 모두 아우른 균형 잡힌 플랜입니다.",
-    "suggestion": "내일은 플랜 전후로 5분씩 ‘스페이스 리피티션’으로 핵심 공식 4~5개를 반복 암기해 보세요. 장기 기억에 도움이 됩니다.",
-    "encouragement": "짧은 반복 학습이 장기 기억의 지름길입니다. 오늘처럼 꾸준히 하면 더 탄탄해질 거예요! 🔄"
+    "analysis": "각 세션의 시간이 적절하게 배분되어 있어 집중력을 유지하며 학습하기에 알맞았습니다.",
+    "suggestion": "내일은 세션 사이에 3분간 ‘공식 암송 반복’ 타임을 넣어 보세요. 소리 내어 핵심 공식을 외우면 기억이 오래갑니다.",
+    "encouragement": "짧고 자주 반복하는 학습이 장기 기억을 돕습니다. 꾸준히 실천하면 큰 도움이 될 거예요! 🔄"
   },
   {
-    "analysis": "전체적으로 오늘 학습 플랜을 완수하며 이론부터 응용, 복습까지 효과적으로 소화하셨습니다.",
-    "suggestion": "내일은 시험 환경을 모사해 30분 안에 개념과 문제를 섞어 8문제를 풀어보세요. 시간 압박 속에서도 흐름을 유지하는 연습이 됩니다.",
-    "encouragement": "실전 연습을 통해 집중력과 속도를 모두 기를 수 있습니다. 내일도 멋지게 해내실 거예요! 🎯"
+    "analysis": "전체적으로 개념 이해와 실전 적용, 오답 정리를 균형 있게 수행하며 플랜을 완수하셨습니다.",
+    "suggestion": "내일은 시험 환경을 모사해 25분 안에 개념 확인 문제 5개와 실전 문제 5개를 섞어 풀어 보세요. 시간 압박 속에서도 풀이 흐름을 유지하는 연습이 됩니다.",
+    "encouragement": "실전 연습이 자신감을 키워 줍니다. 내일도 멋지게 해내실 거예요! 🏆"
   }
 ];
         const feedback = feedbacks[Math.floor(Math.random() * feedbacks.length)];
@@ -495,9 +495,9 @@
             totalTime: 105, // in minutes
             comparisonText: "지난주 오늘보다 15분 더 공부했어요", // Example comparison text
             studyItems: [
-  "지학사 교과서 개념 정리: 100~103쪽 정리 (12:00–12:30)",
-  "RPM 이차함수 문제 풀이: 120~125쪽 문제 (12:30–13:10)",
-  "이차함수 오답 & 요점 정리: 노트 정리 및 복습 (13:10–13:35)"
+  "이차함수 개념 학습: 기초 개념 정독 (12:00–12:30)",
+  "확인 문제 + 실전 연습: 개념 확인 → 적용 문제 (12:30–13:10)",
+  "오답 복습 및 정리: 문제 풀이 리뷰 (13:10–13:35)"
 ],
             feedback: feedback,
           })
