--- a/plan.html
+++ b/plan.html
@@ -123,28 +123,29 @@
 
       // =============== AI 제안 생성 (랜덤 더미) ===============
       const suggestions = [
-          {
-            "title": "수학 교과서 개념 정리",
-            "emoji": "📗",
-            "memo": "100~103쪽 정리",
-            "start": "12:00",
-            "end": "12:30"
-          },
-          {
-            "title": "RPM 이차함수 문제 풀이",
-            "emoji": "📘",
-            "memo": "120~125쪽 문제",
-            "start": "12:30",
-            "end": "13:10"
-          },
-          {
-            "title": "이차함수 오답 & 요점 정리",
-            "emoji": "🧠",
-            "memo": "노트 정리 및 복습",
-            "start": "13:10",
-            "end": "13:35"
-          }
-        ];
+  {
+    "title": "천재(류) 이차함수 개념 학습",
+    "emoji": "📖",
+    "memo": "기초 개념 정독",
+    "start": "12:00",
+    "end": "12:30"
+  },
+  {
+    "title": "확인 문제 + 실전 연습",
+    "emoji": "✏️",
+    "memo": "개념 확인 → 적용 문제",
+    "start": "12:30",
+    "end": "13:10"
+  },
+  {
+    "title": "오답 복습 및 정리",
+    "emoji": "🔍",
+    "memo": "문제 풀이 리뷰",
+    "start": "13:10",
+    "end": "13:35"
+  }
+]
+;
         
         function generateAiSuggestions() {
           const newAi = suggestions.map((it, i) => ({
